fix: manual updates to candidate and employee controllers and services